// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list-view/demo/basic.md correctly 1`] = `
<div
  style="margin:0 auto;width:96%;"
>
  <div
    class="fortest am-list-view-scrollview"
    style="position:relative;overflow:auto;-webkit-overflow-scrolling:touch;flex:1;height:0;border:1px solid #ddd;margin:0.1rem 0;"
  >
    <div
      class="am-list-view-scrollview-content am-list"
      style="position:absolute;min-width:100%;"
    >
      <div
        class="am-list-header"
      >
        <span>
          header
        </span>
      </div>
      <div
        class="am-list-body my-body"
      >
        <span
          style="display:none;"
        >
          you can custom body wrap element
        </span>
      </div>
      <div
        class="am-list-footer"
      >
        <div
          style="padding:30px;text-align:center;"
        >
          加载中...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list-view/demo/basic-body.md correctly 1`] = `
<div
  class="am-list am-list-view-scrollview"
>
  <div
    class="am-list-header"
  >
    <span>
      header
    </span>
  </div>
  <div
    class="am-list-body"
  />
  <div
    class="am-list-footer"
  >
    <div
      style="padding:30px;text-align:center;"
    >
      加载中...
    </div>
  </div>
</div>
`;

exports[`renders ./components/list-view/demo/basic-sticky.md correctly 1`] = `
<div
  class="am-list am-list-view-scrollview"
>
  <div
    class="am-list-header"
  >
    <span>
      header
    </span>
  </div>
  <div
    class="for-stickyContainer-demo"
  >
    <div
      class="am-list-body"
    />
  </div>
  <div
    class="am-list-footer"
  >
    <div
      style="padding:30px;text-align:center;"
    >
      加载中...
    </div>
  </div>
</div>
`;

exports[`renders ./components/list-view/demo/idxed.md correctly 1`] = `
<div
  class="am-indexed-list-container"
>
  <div
    class="fortest am-indexed-list am-list-view-scrollview"
    style="position:relative;overflow:auto;-webkit-overflow-scrolling:touch;flex:1;height:0;"
  >
    <div
      class="am-list-view-scrollview-content am-list"
      style="position:absolute;min-width:100%;"
    >
      <div
        class="am-list-header"
      >
        <span>
          头部内容请自定义
        </span>
      </div>
      <div
        class="am-list-body"
      >
        <div
          class="am-indexed-list-section-header am-list-body"
        >
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                <div
                  class="ih"
                >
                  A
                </div>
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
        </div>
        <div
          class="am-indexed-list-section-body am-list-body"
        >
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省0
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省1
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省2
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省3
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省4
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省5
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省6
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省7
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省8
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                安徽省9
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
        </div>
        <div
          class="am-indexed-list-section-header am-list-body"
        >
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                <div
                  class="ih"
                >
                  B
                </div>
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
        </div>
        <div
          class="am-indexed-list-section-body am-list-body"
        >
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市0
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市1
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市2
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市3
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市4
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市5
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市6
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                北京市7
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none;"
            />
          </div>
        </div>
      </div>
      <div
        class="am-list-footer"
      >
        <span>
          尾部内容请自定义
        </span>
      </div>
    </div>
  </div>
  <ul
    class="am-indexed-list-quick-search-bar"
    style="position:absolute;top:20px;"
  >
    <li
      data-qf-target="#"
    >
      #
    </li>
    <li
      data-qf-target="A"
    >
      A
    </li>
    <li
      data-qf-target="B"
    >
      B
    </li>
    <li
      data-qf-target="C"
    >
      C
    </li>
    <li
      data-qf-target="F"
    >
      F
    </li>
    <li
      data-qf-target="G"
    >
      G
    </li>
    <li
      data-qf-target="H"
    >
      H
    </li>
    <li
      data-qf-target="J"
    >
      J
    </li>
    <li
      data-qf-target="L"
    >
      L
    </li>
    <li
      data-qf-target="N"
    >
      N
    </li>
    <li
      data-qf-target="Q"
    >
      Q
    </li>
    <li
      data-qf-target="S"
    >
      S
    </li>
    <li
      data-qf-target="T"
    >
      T
    </li>
    <li
      data-qf-target="X"
    >
      X
    </li>
    <li
      data-qf-target="Y"
    >
      Y
    </li>
    <li
      data-qf-target="Z"
    >
      Z
    </li>
  </ul>
</div>
`;

exports[`renders ./components/list-view/demo/idxed-sticky.md correctly 1`] = `
<div
  style="padding-top:0.88rem;position:relative;"
>
  <div
    style="position:absolute;top:0;left:0;right:0;"
  >
    <form
      class="am-search"
    >
      <div
        class="am-search-input"
      >
        <div
          class="am-search-synthetic-ph"
        >
          <span
            class="am-search-synthetic-ph-container"
          >
            <i
              class="am-search-synthetic-ph-icon"
            />
            <span
              class="am-search-synthetic-ph-placeholder"
              style="visibility:visible;"
            >
              搜索
            </span>
          </span>
        </div>
        <input
          class="am-search-value"
          placeholder="搜索"
          type="search"
          value=""
        />
        <a
          class="am-search-clear"
        />
      </div>
      <div
        class="am-search-cancel"
      >
        取消
      </div>
    </form>
  </div>
  <div
    class="am-indexed-list-container"
  >
    <div
      class="am-list am-indexed-list am-list-view-scrollview"
    >
      <div
        class="am-list-header"
      >
        <span>
          头部内容请自定义
        </span>
      </div>
      <div>
        <div
          class="am-list-body"
        >
          <div>
            <div
              style="padding-bottom:0;"
            />
            <div
              class=""
              style="transform:translateZ(0);"
            >
              <div
                class="am-indexed-list-section-header am-list-body"
              >
                <div
                  class="am-list-item am-list-item-middle"
                >
                  <div
                    class="am-list-line"
                  >
                    <div
                      class="am-list-content"
                    >
                      <div
                        class="ih"
                      >
                        A
                      </div>
                    </div>
                  </div>
                  <div
                    class="am-list-ripple"
                    style="display:none;"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="am-indexed-list-section-body am-list-body"
          >
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省0
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省1
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省2
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省3
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省4
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省5
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省6
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省7
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省8
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  安徽省9
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
          </div>
          <div>
            <div
              style="padding-bottom:0;"
            />
            <div
              class=""
              style="transform:translateZ(0);"
            >
              <div
                class="am-indexed-list-section-header am-list-body"
              >
                <div
                  class="am-list-item am-list-item-middle"
                >
                  <div
                    class="am-list-line"
                  >
                    <div
                      class="am-list-content"
                    >
                      <div
                        class="ih"
                      >
                        B
                      </div>
                    </div>
                  </div>
                  <div
                    class="am-list-ripple"
                    style="display:none;"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="am-indexed-list-section-body am-list-body"
          >
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市0
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市1
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市2
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市3
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市4
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市5
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市6
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
            <div
              class="am-list-item am-list-item-middle"
            >
              <div
                class="am-list-line"
              >
                <div
                  class="am-list-content"
                >
                  北京市7
                </div>
              </div>
              <div
                class="am-list-ripple"
                style="display:none;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="am-list-footer"
      >
        <span>
          尾部内容请自定义
        </span>
      </div>
    </div>
    <ul
      class="am-indexed-list-quick-search-bar"
      style="top:85px;"
    >
      <li
        data-qf-target="#"
      >
        #
      </li>
      <li
        data-qf-target="A"
      >
        A
      </li>
      <li
        data-qf-target="B"
      >
        B
      </li>
      <li
        data-qf-target="C"
      >
        C
      </li>
      <li
        data-qf-target="F"
      >
        F
      </li>
      <li
        data-qf-target="G"
      >
        G
      </li>
      <li
        data-qf-target="H"
      >
        H
      </li>
      <li
        data-qf-target="J"
      >
        J
      </li>
      <li
        data-qf-target="L"
      >
        L
      </li>
      <li
        data-qf-target="N"
      >
        N
      </li>
      <li
        data-qf-target="Q"
      >
        Q
      </li>
      <li
        data-qf-target="S"
      >
        S
      </li>
      <li
        data-qf-target="T"
      >
        T
      </li>
      <li
        data-qf-target="X"
      >
        X
      </li>
      <li
        data-qf-target="Y"
      >
        Y
      </li>
      <li
        data-qf-target="Z"
      >
        Z
      </li>
    </ul>
  </div>
</div>
`;
